<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    >

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/signup_name"
        style="@style/LoginTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/username"
        android:drawablePadding="4dp"
        android:hint="@string/name_hint"
        android:inputType="text"
        android:maxLines="1"
        app:met_baseColor="@color/colorText"
        app:met_floatingLabel="normal"
        app:met_floatingLabelText="@string/name_hint"
        app:met_floatingLabelTextColor="@color/colorText"
        app:met_singleLineEllipsis="true"
        app:met_textColor="@color/colorText"
        app:met_underlineColor="@color/colorPrimary"
        custom:layout_constraintLeft_toLeftOf="parent"
        custom:layout_constraintRight_toRightOf="parent"
        custom:layout_constraintTop_toTopOf="parent"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/signup_email"
        style="@style/LoginTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableEnd="@drawable/email"
        android:drawablePadding="4dp"
        android:hint="@string/email_hint"
        android:inputType="text"
        android:maxLines="1"
        app:met_baseColor="@color/colorText"
        app:met_floatingLabel="normal"
        app:met_floatingLabelText="@string/email_hint"
        app:met_floatingLabelTextColor="@color/colorText"
        app:met_singleLineEllipsis="true"
        app:met_textColor="@color/colorText"
        app:met_underlineColor="@color/colorPrimary"
        custom:layout_constraintLeft_toLeftOf="parent"
        custom:layout_constraintRight_toRightOf="parent"
        custom:layout_constraintTop_toBottomOf="@id/signup_name"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/signup_phone"
        style="@style/LoginTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableEnd="@drawable/phone"
        android:drawablePadding="4dp"
        android:hint="@string/phone_hint"
        android:inputType="phone"
        android:maxLines="1"
        app:met_baseColor="@color/colorText"
        app:met_floatingLabel="normal"
        app:met_floatingLabelText="@string/phone_hint"
        app:met_floatingLabelTextColor="@color/colorText"
        app:met_maxCharacters="10"
        app:met_textColor="@color/colorText"
        app:met_underlineColor="@color/colorPrimary"
        custom:layout_constraintLeft_toLeftOf="parent"
        custom:layout_constraintRight_toRightOf="parent"
        custom:layout_constraintTop_toBottomOf="@+id/signup_email"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/signup_password"
        style="@style/LoginTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableEnd="@drawable/password"
        android:drawablePadding="4dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        app:met_baseColor="@color/colorText"
        app:met_floatingLabel="normal"
        app:met_floatingLabelText="@string/password_hint"
        app:met_floatingLabelTextColor="@color/colorText"
        app:met_maxCharacters="20"
        app:met_textColor="@color/colorText"
        app:met_underlineColor="@color/colorPrimary"
        custom:layout_constraintLeft_toLeftOf="parent"
        custom:layout_constraintRight_toRightOf="parent"
        custom:layout_constraintTop_toBottomOf="@+id/signup_phone"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/signup_confirm_password"
        style="@style/LoginTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableEnd="@drawable/password"
        android:drawablePadding="4dp"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        app:met_baseColor="@color/colorText"
        app:met_floatingLabel="normal"
        app:met_floatingLabelText="@string/confirm_password_hint"
        app:met_floatingLabelTextColor="@color/colorText"
        app:met_maxCharacters="20"
        app:met_textColor="@color/colorText"
        app:met_underlineColor="@color/colorPrimary"
        custom:layout_constraintLeft_toLeftOf="parent"
        custom:layout_constraintRight_toRightOf="parent"
        custom:layout_constraintTop_toBottomOf="@+id/signup_password"/>

    <Button
        android:id="@+id/signup_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_login_drawable"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:text="@string/label_signup"
        android:textColor="@color/colorText"
        custom:layout_constraintLeft_toLeftOf="parent"
        custom:layout_constraintRight_toRightOf="parent"
        custom:layout_constraintTop_toBottomOf="@+id/signup_confirm_password"/>

</android.support.constraint.ConstraintLayout>