<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forgot_password_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_gradient"
    android:padding="16dp"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/label_forgot_password"
        style="@style/LoginTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/label_reset_password"
        android:textColor="@color/colorText"
        android:textSize="24sp"
        android:textStyle="bold"
        custom:layout_constraintBottom_toTopOf="@+id/forgot_password"
        custom:layout_constraintHorizontal_bias="0.503"
        custom:layout_constraintLeft_toLeftOf="parent"
        custom:layout_constraintRight_toRightOf="parent"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/forgot_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/login_gradient"
        android:drawableEnd="@drawable/username"
        android:drawablePadding="4dp"
        android:hint="@string/email_hint"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintVertical_bias="0.499"
        app:met_baseColor="@color/colorText"
        app:met_floatingLabel="normal"
        app:met_floatingLabelText="@string/email_hint"
        app:met_floatingLabelTextColor="@color/colorText"
        app:met_singleLineEllipsis="true"
        app:met_textColor="@color/colorText"
        app:met_underlineColor="@color/colorPrimary"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintLeft_toLeftOf="parent"
        custom:layout_constraintRight_toRightOf="parent"
        custom:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/button_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_login_drawable"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:paddingEnd="48dp"
        android:paddingStart="48dp"
        android:paddingTop="16dp"
        android:text="@string/send_reset_instructions"
        android:textColor="@color/colorText"
        custom:layout_constraintLeft_toLeftOf="parent"
        custom:layout_constraintRight_toRightOf="parent"
        custom:layout_constraintTop_toBottomOf="@+id/forgot_password"/>

    <ProgressBar
        android:id="@+id/password_reset_progress_bar"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_forgot_password"/>

</android.support.constraint.ConstraintLayout>


    <!--<?xml version="1.0" encoding="utf-8"?>-->
    <!--<android.support.constraint.ConstraintLayout-->
    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:custom="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:id="@+id/forgot_password_layout"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:padding="16dp"-->
    <!--tools:layout_editor_absoluteX="0dp"-->
    <!--tools:layout_editor_absoluteY="81dp">-->

    <!--<TextView-->
    <!--android:id="@+id/label_forgot_password"-->
    <!--style="@style/LoginTheme"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginBottom="24dp"-->
    <!--android:gravity="center"-->
    <!--android:text="@string/label_reset_password"-->
    <!--android:textColor="@color/colorPrimaryDark"-->
    <!--android:textSize="24sp"-->
    <!--android:textStyle="bold"-->
    <!--custom:layout_constraintBottom_toTopOf="@+id/forgot_password"-->
    <!--custom:layout_constraintHorizontal_bias="0.503"-->
    <!--custom:layout_constraintLeft_toLeftOf="parent"-->
    <!--custom:layout_constraintRight_toRightOf="parent"/>-->

    <!--<com.rengwuxian.materialedittext.MaterialEditText-->
    <!--android:id="@+id/forgot_password"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginLeft="24dp"-->
    <!--android:layout_marginRight="24dp"-->
    <!--android:hint="@string/email_hint"-->
    <!--android:inputType="text"-->
    <!--android:maxLines="1"-->
    <!--app:layout_constraintVertical_bias="0.499"-->
    <!--app:met_baseColor="@color/colorAccent"-->
    <!--app:met_floatingLabel="normal"-->
    <!--app:met_floatingLabelText="@string/email_hint"-->
    <!--app:met_singleLineEllipsis="true"-->
    <!--app:met_textColor="@color/colorPrimaryText"-->
    <!--custom:layout_constraintBottom_toBottomOf="parent"-->
    <!--custom:layout_constraintLeft_toLeftOf="parent"-->
    <!--custom:layout_constraintRight_toRightOf="parent"-->
    <!--custom:layout_constraintTop_toTopOf="parent"/>-->

    <!--<Button-->
    <!--android:id="@+id/button_forgot_password"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="16dp"-->
    <!--android:background="@drawable/button_drawable"-->
    <!--android:gravity="center"-->
    <!--android:paddingBottom="8dp"-->
    <!--android:paddingEnd="16dp"-->
    <!--android:paddingStart="16dp"-->
    <!--android:paddingTop="8dp"-->
    <!--android:text="@string/send_reset_instructions"-->
    <!--android:textColor="@color/colorText"-->
    <!--custom:layout_constraintLeft_toLeftOf="parent"-->
    <!--custom:layout_constraintRight_toRightOf="parent"-->
    <!--custom:layout_constraintTop_toBottomOf="@+id/forgot_password"/>-->

    <!--<ProgressBar-->
    <!--android:id="@+id/password_reset_progress_bar"-->
    <!--android:layout_width="20dp"-->
    <!--android:layout_height="20dp"-->
    <!--android:layout_marginLeft="8dp"-->
    <!--android:layout_marginRight="8dp"-->
    <!--android:layout_marginTop="16dp"-->
    <!--android:visibility="gone"-->
    <!--app:layout_constraintLeft_toLeftOf="parent"-->
    <!--app:layout_constraintRight_toRightOf="parent"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/button_forgot_password"/>-->

    <!--</android.support.constraint.ConstraintLayout>-->